# simshell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INSTALL.txt  Makefile  README.md  build.bat  build.sh  cmake_install.cmake  simshell.sln  simshell.vcxproj  simshell.vcxproj.filters
Lua5.3/: CMakeLists.txt  Makefile  cmake_install.cmake
Lua5.3/src/: luac.c  lvm.c
cap/: CMakeLists.txt  Makefile  cap.c  cap.h  cap_win.c  cmake_install.cmake
gp/: CMakeLists.txt  Makefile  cap.c  cap.h  cmake_install.cmake  getstatus.c  getstatus.h  globalplatform.c  globalplatform.h  gp.h  gsma.h  keys.c  keys.h  scp02.c  scp02.h  scp03.c  scp03.h  scp11.c  scp11.h  securechannel.c  securechannel.h  sw.c  sw.h
gsma/: CMakeLists.txt  Makefile  cmake_install.cmake  euicc.c  euicc.h
iotsafe/: iotsafe.c  iotsafe.h
lua/: CMakeLists.txt  Makefile  cmake_install.cmake  luawrap.c  luawrap.h
mbed/: CMakeLists.txt  Makefile  cmake_install.cmake  hal_aes.c  hal_aes.h  mbedtests.c  mbedtests.h
mbedtls-3.5.1/include/mbedtls/: mbedtls_config.h
pcom/: CMakeLists.txt  calcul_dll.c  calcul_dll.h  libApduEngine.c  libApduEngine.h  pcom_buffers.c  pcom_buffers.h
pcsc/: CMakeLists.txt  Makefile  cmake_install.cmake  iso7816.c  iso7816.h  pcscwrap.c  pcscwrap.h  serial.c  serial.h
shell/: CMakeLists.txt  Makefile  cmake_install.cmake  commands.c  commands.h  config.c  config.h  hal_des.c  hal_des.h  main.c  mbedwrap.c  mbedwrap.h  platform.h  shell.c  shell.h  tools.c  tools.h  vars.c  vars.h  version.c  version.h
unzip/: ioapi.c  unzip.h
x64/Release/simshell.tlog/: CL.command.1.tlog  simshell.lastbuildstate
zip/: cap.c  main.c
